crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 143
expression: "zizmor().input(input_under_test(\"self-hosted/self-hosted-matrix-exclusion.yml\")).args([\"--persona=auditor\"]).run()?"
---
No findings to report. Good job!
