crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted-8.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 153
expression: "zizmor().input(input_under_test(\"self-hosted/issue-283-repro.yml\")).args([\"--persona=auditor\"]).run()?"
---
No findings to report. Good job!
