crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-10.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 419
expression: "zizmor().input(input_under_test(\"template-injection/issue-749-repro.yml\")).run()?"
---
No findings to report. Good job! (3 suppressed)
