crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/template-injection-dynamic-matrix.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[template-injection]: code injection via template expansion
  --> @@INPUT@@:22:36
   |
21 |         run: |
   |         --- note: this run block
22 |           echo "doing a thing: ${{ matrix.dynamic }}"
   |                                    -------------- note: may expand into attacker-controllable code
   |
   = note: audit confidence → Unknown

warning[template-injection]: code injection via template expansion
  --> @@INPUT@@:22:36
   |
21 |         run: |
   |         --- this run block
22 |           echo "doing a thing: ${{ matrix.dynamic }}"
   |                                    -------------- may expand into attacker-controllable code
   |
   = note: audit confidence → Medium
   = note: this finding has an auto-fix

2 findings (1 fixable): 1 unknown, 0 informational, 0 low, 1 medium, 0 high
