crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/issue-22-repro.yml\")).run()?"
---
No findings to report. Good job! (2 suppressed)
