crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 379
expression: "zizmor().input(input_under_test(\"template-injection/pr-317-repro.yml\")).run()?"
---
warning[template-injection]: code injection via template expansion
  --> @@INPUT@@:28:20
   |
27 |       - run: |
   |         --- this run block
28 |           echo ${{ matrix.bar }}
   |                    ^^^^^^^^^^ may expand into attacker-controllable code
   |
   = note: audit confidence → Medium
   = note: this finding has an auto-fix

4 findings (3 suppressed, 1 fixable): 0 informational, 0 low, 1 medium, 0 high
