crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 397
expression: "zizmor().input(input_under_test(\"template-injection/issue-418-repro.yml\")).run()?"
---
No findings to report. Good job! (4 suppressed)
