crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-9.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 411
expression: "zizmor().input(input_under_test(\"template-injection/false-positive-menagerie.yml\")).run()?"
---
No findings to report. Good job! (8 suppressed)
