crates/zizmor/tests/integration/snapshots/integration__snapshot__undocumented_permissions-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"undocumented-permissions/contents-read-only.yml\")).args([\"--persona=pedantic\"]).run()?"
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:16:9
   |
16 |       - uses: actions/checkout@v4
   |         ------------------------- does not set persist-credentials: false
   |
   = note: audit confidence → Low
   = note: this finding has an auto-fix

info[anonymous-definition]: workflow or action definition without a name
  --> @@INPUT@@:10:3
   |
10 | /   test-job:
11 | |     runs-on: ubuntu-latest
...  |
16 | |       - uses: actions/checkout@v4
17 | |       - run: echo "Test"
   | |________________________- info: this job
   |
   = note: audit confidence → High

2 findings (1 fixable): 0 unknown, 1 informational, 0 low, 1 medium, 0 high
