crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned-uses-empty-config.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 249
expression: "zizmor().config(input_under_test(\"unpinned-uses/configs/empty.yml\")).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:12:9
   |
12 |       - uses: actions/setup-python@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:14:9
   |
14 |       - uses: actions/checkout@v3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:22:9
   |
22 |       - uses: pypa/gh-action-pypi-publish@release/v1
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:24:9
   |
24 |       - uses: github/codeql-action/init@v3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:26:9
   |
26 |       - uses: github/codeql-action/upload-sarif@v3
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

7 findings (2 suppressed): 0 informational, 0 low, 0 medium, 5 high
